// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkTopNFlow Table Component rendering it renders the default widget 1`] = `
<pure(Component)
  data={
    Object {
      "activeAgents": 60015,
      "networkEvents": 16,
      "uniqueFlowId": 10277307,
      "uniquePrivateIps": 383,
    }
  }
  loading={false}
/>
`;

exports[`NetworkTopNFlow Table Component rendering it renders the loading panel 1`] = `
<pure(Component)
  data={
    Object {
      "activeAgents": 60015,
      "networkEvents": 16,
      "uniqueFlowId": 10277307,
      "uniquePrivateIps": 383,
    }
  }
  loading={true}
/>
`;
